--- a/javascript/exercise-1/index.html
+++ b/javascript/exercise-1/index.html
@@ -6,10 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
+    <script src="../exercise-2/scripts/index.js"></script>
     <title>Exercises-1</title>
 </head>
 <body>
-<script src="../exercise-1/script.js"></script>
+
 </body>
 </html>
