--- a/javascript/exercise-10/index.html
+++ b/javascript/exercise-10/index.html
@@ -25,8 +25,12 @@
 
 <body>
 <h1>Gissa ett nummer!!</h1>
-<p>Välj ett valfritt nummer mellan 1-100. Du har tre gissningar på dig att gissa rätt. Du får reda på om din gissning är för hög eller låg..</p>
-<div class="form"> <label for="guessField">Gör en gissning: </label><input type="text" id="guessField" class="guessField"> <input type="submit" value="Gissa!" class="guessSubmit"> </div>
+<p>Välj ett valfritt nummer mellan 1-100. Du har tre gissningar på dig att gissa rätt.
+    Du får reda på om din gissning är för hög eller låg..</p>
+<div class="form"> <label for="guessField">Gör en gissning: </label>
+    <input type="text" id="guessField" class="guessField">
+    <input type="submit" value="Gissa!" class="guessSubmit">
+</div>
 <div class="resultParas">
     <p class="guesses"></p>
     <p class="lastResult"></p>
